Configured the connection to the database

--- a/NevernoteAPI/appsettings.json
+++ b/NevernoteAPI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=(localdb)\\mssqllocaldb;Database=Nevernote;Trusted_Connection=True"
+  }
 }
