--- a/NevernoteAPI/NevernoteAPI.csproj
+++ b/NevernoteAPI/NevernoteAPI.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlserver" Version="2.1.4" />
   </ItemGroup>
 
 </Project>
