--- a/NevernoteAPI/appsettings.json
+++ b/NevernoteAPI/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=(localdb)\\mssqllocaldb;Database=Nevernote;Trusted_Connection=True"
+    "DatabaseConnection": "Server=(localdb)\\mssqllocaldb;Database=Nevernote;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
